--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 560px;
 }
 
 .constructor_item_2 {
@@ -12,9 +11,13 @@
 }
 
 .constructor_item_3 {
+    margin-top: 40px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    width: 560px;
+}
+
+.place {
+    height: 100px;
 }
